--- a/info.yaml
+++ b/info.yaml
@@ -18,7 +18,7 @@ caravel_test:
 
 # module test
 module_test:
-  recipe: "all" 
+  recipe: "test" 
   directory: "seven-segment-seconds"
   makefile: "Makefile"
 
